[tool.poetry]
name = "covidqueue"
version = "0.1.0"
description = ""
authors = ["daniel-mcclintock <13973653+daniel-mcclintock@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
black = "^21.8b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
